updated to version 1 across the board